# swift

./: .gitattributes  .gitignore  README.md  app.js  file.webm  package-lock.json  package.json  pyproject.toml  setup.py
.github/: build-wheels.sh
.github/workflows/: python-publish.yml  python_publish_linux.yml  pythonpackage.yml  upload_tar.yml
examples/: test.py
next-swift/: README.md  package-lock.json  package.json  server.ts  tsconfig.json
next-swift/components/: Controls.tsx  Loader.tsx  Swift.reducer.ts  Swift.tsx  SwiftBar.tsx  SwiftComponents.tsx  SwiftInfo.tsx
next-swift/pages/: index.tsx
next-swift/public/: gif.worker.js  sheep.fbx  tree.fbx
next-swift/styles/: Home.module.css  Swift.module.scss  SwiftBar.module.scss  SwiftInfo.module.scss  globals.css
public/js/: index.js  lib.js
src/: anaglyph-effect.mjs  buttons.mjs  collada-loader.mjs  create-protocol.js  index.css  index.html  index.js  lib.mjs  orbit-controls.mjs  renderer.mjs  tga-loader.mjs
src/lib/: lib.mjs
src/tlib/: collada-loader.mjs  orbit-controls.mjs  stl-loader.mjs  tga-loader.mjs
src_old/: preload.js
src_old/lib/: create-protocol.js
src_old/tlib/: stl-loader.mjs
swift/: Swift.py  Swift2.py  SwiftCamera.py  SwiftElement.py  SwiftRoute.py  __init__.py  rtc.py
swift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
swift/core/: linalg.h  phys.c  phys.cpp  phys.h
swift/public/: git-commit-version.txt  index.html
swift/public/js/: index.js  lib.js
swift/public/style/: index.css
swift/src_old/: index.js
swift/src_old/lib/: buttons.mjs  mime-types.js
